Refactor data storage and tidy up webpage file locations

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "'acceltra.png'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,6 +76,8 @@
     }
    ],
    "source": [
+    "import pickle\n",
+    "\n",
     "items = {}\n",
     "\n",
     "def extract_useful_data(data):\n",
@@ -102,23 +104,19 @@
     "print(item_names_melee)\n",
     "print(item_names_sentinels)\n",
     "\n",
+    "category_data = [\n",
+    "    {\"name\": \"Primary\", \"item_info\": item_names_primary},\n",
+    "    {\"name\": \"Secondary\", \"item_info\": item_names_secondary},\n",
+    "    {\"name\": \"Melee\", \"item_info\": item_names_melee},\n",
+    "    {\"name\": \"Sentinels\", \"item_info\": item_names_sentinels},\n",
+    "]\n",
+    "\n",
+    "# Save the category data so that main.py can access it easily\n",
+    "pickle.dump( category_data, open(\"category_data.pickle\", \"wb\"))\n",
+    "\n",
     "# Save the items dictionary as a javascript file, so that it can be directly loaded by the page\n",
-    "with open(\"./js/itemComponents.js\", \"w\") as f:\n",
-    "    f.write(\"var itemComponents = \" + json.dumps(items))\n",
-    "    \n",
-    "# Generate a string of the data and save a python file. Horrendous bodge, but will be cut later when this notebook is\n",
-    "# later integrated with main.py.\n",
-    "item_names_string = (\"item_names_primary = \" +\n",
-    "                     json.dumps(item_names_primary) +\n",
-    "                     \"\\n\\nitem_names_secondary = \" +\n",
-    "                     json.dumps(item_names_secondary) +\n",
-    "                     \"\\n\\nitem_names_melee = \" +\n",
-    "                     json.dumps(item_names_melee) +\n",
-    "                     \"\\n\\nitem_names_sentinels = \" +\n",
-    "                     json.dumps(item_names_sentinels))\n",
-    "    \n",
-    "with open(\"./item_names.py\", \"w\") as f:\n",
-    "    f.write(item_names_string)"
+    "with open(\"./webpage/js/item-components.js\", \"w\") as f:\n",
+    "    f.write(\"var itemComponents = \" + json.dumps(items))"
    ]
   }
  ],
