--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,8 +804,8 @@
     "import pickle\n",
     "\n",
     "items = {}\n",
-    "images = []\n",
     "safe_names = {}\n",
+    "images = []\n",
     "\n",
     "def extract_useful_data(data):\n",
     "    \"\"\"Extract the components needed for each items and store them against the item name in the items dictionary.\n",
@@ -820,6 +820,8 @@
     "            images.append(item[\"imageName\"])\n",
     "            code_safe_name = item[\"name\"].lower().replace(\" \", \"-\").replace(\"&\", \"and\")\n",
     "            safe_names[item[\"name\"]] = code_safe_name\n",
+    "            for component in item[\"components\"]:\n",
+    "                images.append(component[\"imageName\"])\n",
     "            item_names.append([item[\"name\"], item[\"imageName\"], code_safe_name])\n",
     "    return item_names\n",
     "\n",
@@ -854,14 +856,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from shutil import copyfile\n",
     "\n",
-    "for image in images:\n",
-    "    copyfile(\"data/img/\" + image, \"webpage/img/\" + image)"
+    "for image in set(images):\n",
+    "    if os.path.isfile(\"data/img/\" + image):\n",
+    "        copyfile(\"data/img/\" + image, \"webpage/img/\" + image)"
    ]
   }
  ],
@@ -870,6 +874,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
