Reorganise item categories
Restructure Archwing section to match codex; arch-guns in Primary, arch-melee in Melee, Archwings in Warframes.
Reorder the tabs to put Warframes & Vehicles before Sentinels.
Remove Kuva weapons from lists.
Move sentinel weapons from Primary to Sentinel.

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
     "with open('./data/json/Archwing.json') as json_file:\n",
     "    data_archwing = json.load(json_file)\n",
     "\n",
-    "with open('./data/json/Arch-Gun.json') as json_file:\n",
-    "    data_archgun = json.load(json_file)\n",
+    "# with open('./data/json/Arch-Gun.json') as json_file:\n",
+    "#     data_archgun = json.load(json_file)\n",
     "\n",
     "with open('./data/json/Arch-Melee.json') as json_file:\n",
     "    data_archmelee = json.load(json_file)"
@@ -3272,30 +3272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Corvas', 'corvas.png', 'corvas']\n",
-      "['Cyngas', 'cyngas.png', 'cyngas']\n",
-      "['Dual Decurion', 'dual-decurion.png', 'dual-decurion']\n",
-      "['Fluctus', 'fluctus.png', 'fluctus']\n",
-      "['Grattler', 'grattler.png', 'grattler']\n",
-      "['Imperator', 'imperator.png', 'imperator']\n",
-      "['Imperator Vandal', 'imperator-vandal.png', 'imperator-vandal']\n",
-      "['Larkspur', 'larkspur.png', 'larkspur']\n",
-      "['Phaedra', 'phaedra.png', 'phaedra']\n",
-      "['Velocitus', 'velocitus.png', 'velocitus']\n",
-      "['Acceltra', 'Amprex', 'Arca Plasmor', 'Argonak', 'Astilla', 'Attica', 'Basmu', 'Battacor', 'Baza', 'Baza Prime', 'Boar', 'Boar Prime', 'Boltor', 'Boltor Prime', 'Braton Prime', 'Braton Vandal', 'Bubonico', 'Burston', 'Burston Prime', 'Buzlok', 'Cedo', 'Cernos', 'Cernos Prime', 'Convectrix', 'Corinth', 'Corinth Prime', 'Cortege', 'Cryotra', 'Daikyu', 'Dera', 'Dera Vandal', 'Drakgoon', 'Dread', 'Exergis', 'Ferrox', 'Flux Rifle', 'Fulmin', 'Glaxion', 'Gorgon', 'Gorgon Wraith', 'Grakata', 'Grinlok', 'Harpak', 'Hek', 'Helstrum', 'Hema', 'Hind', 'Ignis', 'Ignis Wraith', 'Javlok', 'Karak', 'Karak Wraith', 'Kohm', 'Komorex', 'Kuva Ayanga', 'Kuva Bramma', 'Kuva Chakkhurr', 'Kuva Drakgoon', 'Kuva Hind', 'Kuva Karak', 'Kuva Kohm', 'Kuva Ogris', 'Kuva Quartakk', 'Kuva Tonkor', 'Lanka', 'Latron', 'Latron Prime', 'Latron Wraith', 'Lenz', 'Miter', 'Morgha', 'Mutalist Cernos', 'Mutalist Quanta', 'Nagantaka', 'Ogris', 'Opticor', 'Panthera', 'Panthera Prime', 'Paracyst', 'Paris', 'Paris Prime', 'Penta', 'Phage', 'Phantasma', 'Proboscis Cernos', 'Quanta', 'Quartakk', 'Quellor', 'Rubico', 'Rubico Prime', 'Scourge', 'Shedu', 'Simulor', 'Snipetron', 'Snipetron Vandal', 'Sobek', 'Soma', 'Soma Prime', 'Sporothrix', 'Stahlta', 'Stradavar', 'Stradavar Prime', 'Strun Wraith', 'Supra', 'Sybaris', 'Sybaris Prime', 'Synapse', 'Tazicor', 'Tenora', 'Tetra', 'Tiberon', 'Tiberon Prime', 'Tigris', 'Tigris Prime', 'Tonkor', 'Torid', 'Trumna', 'Vectis', 'Vectis Prime', 'Veldt', 'Vulcax', 'Vulkar', 'Zarr', 'Zenith', 'Zhuge', 'Zhuge Prime']\n",
-      "['Corvas', 'Cyngas', 'Dual Decurion', 'Fluctus', 'Grattler', 'Imperator', 'Imperator Vandal', 'Larkspur', 'Phaedra', 'Velocitus']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
@@ -3318,6 +3299,8 @@
     "    \"\"\"\n",
     "    item_names = []\n",
     "    for item in data:\n",
+    "        if item[\"name\"].startswith(\"Kuva \"):\n",
+    "            continue\n",
     "        if item_has_components(item):\n",
     "            # Get the item's components \n",
     "            item_components = get_item_components(item)\n",
@@ -3339,32 +3322,40 @@
     "    return item_names\n",
     "\n",
     "# Extract the costs from all of the loaded in data sets\n",
+    "item_names_archwing = extract_useful_data(data_archwing)\n",
+    "item_names_archmelee = extract_useful_data(data_archmelee)\n",
+    "\n",
     "item_names_primary = extract_useful_data(data_primary)\n",
     "item_names_secondary = extract_useful_data(data_secondary)\n",
-    "item_names_melee = extract_useful_data(data_melee)\n",
+    "item_names_melee = extract_useful_data(data_melee) + item_names_archmelee\n",
     "item_names_sentinels = extract_useful_data(data_sentinels)\n",
-    "item_names_warframes = extract_useful_data(data_warframes)\n",
-    "item_names_archwing = extract_useful_data(data_archwing)\n",
-    "item_names_archgun = extract_useful_data(data_archgun)\n",
-    "item_names_archmelee = extract_useful_data(data_archmelee)\n",
-    "item_names_architems = item_names_archwing + item_names_archgun + item_names_archmelee\n",
+    "item_names_warframes = extract_useful_data(data_warframes) + item_names_archwing\n",
+    "\n",
+    "# Move the buildable sentinel weapons from Primary to Sentinel\n",
+    "for entry in item_names_primary:\n",
+    "    if entry[0] in [\"Cryotra\", \"Helstrum\", \"Tazicor\", \"Vulcax\"]:\n",
+    "        item_names_primary.remove(entry)\n",
+    "        item_names_sentinels.append(entry)\n",
+    "    \n",
+    "\n",
+    "# item_names_archgun = extract_useful_data(data_archgun)\n",
     "\n",
     "# Primary weapons includes arch-guns, here we simply remove these entries to prevent duplication\n",
-    "for entry in item_names_archgun:\n",
-    "    if entry in item_names_primary:\n",
-    "        print(entry)\n",
-    "        item_names_primary.remove(entry)\n",
+    "# for entry in item_names_archgun:\n",
+    "#     if entry in item_names_primary:\n",
+    "#         print(entry)\n",
+    "#         item_names_primary.remove(entry)\n",
     "\n",
-    "print([a for a, _, _ in item_names_primary])\n",
-    "print([a for a, _, _ in item_names_archgun])\n",
+    "# print([a for a, _, _ in item_names_primary])\n",
+    "# print([a for a, _, _ in item_names_archgun])\n",
     "\n",
     "category_data = [\n",
     "    {\"name\": \"Primary\", \"item_info\": item_names_primary},\n",
     "    {\"name\": \"Secondary\", \"item_info\": item_names_secondary},\n",
     "    {\"name\": \"Melee\", \"item_info\": item_names_melee},\n",
+    "    {\"name\": \"Warframes & Vehicles\", \"item_info\": item_names_warframes},\n",
     "    {\"name\": \"Sentinels\", \"item_info\": item_names_sentinels},\n",
-    "    {\"name\": \"Warframes\", \"item_info\": item_names_warframes},\n",
-    "    {\"name\": \"Archwings\", \"item_info\": item_names_architems},\n",
+    "#     {\"name\": \"Archwings\", \"item_info\": item_names_architems},\n",
     "]\n",
     "\n",
     "# Save the category data so that main.py can access it easily\n",
