Move recursive component listing tests to end of notebook

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -61,151 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"name\": \"Kuva Ayanga\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Bramma\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Chakkhurr\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Drakgoon\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Hind\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Karak\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Kohm\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Ogris\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Quartakk\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "{\n",
-      "  \"name\": \"Kuva Tonkor\",\n",
-      "  \"buildPrice\": 0,\n",
-      "  \"components\": [\n",
-      "    {\n",
-      "      \"itemCount\": 1,\n",
-      "      \"name\": \"Blueprint\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def item_has_components(item):\n",
-    "    return \"components\" in item.keys()\n",
-    "\n",
-    "def recursive_component_finder(item):\n",
-    "    \n",
-    "    item_info = {\"name\": item[\"name\"]}\n",
-    "    \n",
-    "    if item_has_components(item):\n",
-    "        item_info[\"buildPrice\"] = item[\"buildPrice\"]\n",
-    "        components = []\n",
-    "        for component in item[\"components\"]:\n",
-    "            component_info = {\"itemCount\": component[\"itemCount\"]}\n",
-    "            component_info = {**component_info, **recursive_component_finder(component)}\n",
-    "            components.append(component_info)\n",
-    "        item_info[\"components\"] = components\n",
-    "    else:\n",
-    "        pass\n",
-    "    \n",
-    "    return item_info\n",
-    "    \n",
-    "\n",
-    "def print_component_tree(item):\n",
-    "    item_data = recursive_component_finder(item)\n",
-    "    print(json.dumps(item_data, indent=2))\n",
-    "    \n",
-    "for weapon in data_primary:\n",
-    "    if weapon[\"name\"].startswith(\"Kuva \"):\n",
-    "        print_component_tree(weapon)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -283,11 +138,11 @@
     "            images.append(component[\"imageName\"])\n",
     "        \n",
     "        # Generate the HTML ID for the item and store it in the global HTML IDs dict, using the item name as the key\n",
-    "        code_safe_name = item[\"name\"].lower().replace(\" \", \"-\").replace(\"&\", \"and\")\n",
-    "        html_ids[item[\"name\"]] = code_safe_name\n",
+    "        html_id = item[\"name\"].lower().replace(\" \", \"-\").replace(\"&\", \"and\")\n",
+    "        html_ids[item[\"name\"]] = html_id\n",
     "        \n",
     "        # Add the item's name, image name, and HTML ID to the item names list\n",
-    "        item_names.append([item[\"name\"], item[\"imageName\"], code_safe_name])\n",
+    "        item_names.append([item[\"name\"], item[\"imageName\"], html_id])\n",
     "        \n",
     "    return item_names\n",
     "\n",
@@ -358,6 +213,167 @@
     "for image in set(images):\n",
     "    if os.path.isfile(\"data/img/\" + image):\n",
     "        copyfile(\"data/img/\" + image, \"webpage/img/\" + image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimenting with recursive component listing\n",
+    "\n",
+    "This section is not required for the data processing, I'm just experimenting with recursive component identification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"name\": \"Nekros\",\n",
+      "  \"buildPrice\": 25000,\n",
+      "  \"components\": [\n",
+      "    {\n",
+      "      \"itemCount\": 1,\n",
+      "      \"name\": \"Blueprint\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"itemCount\": 1,\n",
+      "      \"name\": \"Chassis\",\n",
+      "      \"buildPrice\": 15000,\n",
+      "      \"components\": [\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Blueprint\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1000,\n",
+      "          \"name\": \"Ferrite\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Morphics\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 300,\n",
+      "          \"name\": \"Rubedo\"\n",
+      "        }\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"itemCount\": 1,\n",
+      "      \"name\": \"Neuroptics\",\n",
+      "      \"buildPrice\": 15000,\n",
+      "      \"components\": [\n",
+      "        {\n",
+      "          \"itemCount\": 150,\n",
+      "          \"name\": \"Alloy Plate\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Blueprint\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Neural Sensors\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 150,\n",
+      "          \"name\": \"Polymer Bundle\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 500,\n",
+      "          \"name\": \"Rubedo\"\n",
+      "        }\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"itemCount\": 3,\n",
+      "      \"name\": \"Orokin Cell\",\n",
+      "      \"buildPrice\": 15000,\n",
+      "      \"components\": [\n",
+      "        {\n",
+      "          \"itemCount\": 50000,\n",
+      "          \"name\": \"Alloy Plate\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Blueprint\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 50000,\n",
+      "          \"name\": \"Nano Spores\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 25000,\n",
+      "          \"name\": \"Salvage\"\n",
+      "        }\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"itemCount\": 1,\n",
+      "      \"name\": \"Systems\",\n",
+      "      \"buildPrice\": 15000,\n",
+      "      \"components\": [\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Blueprint\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Control Module\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 1,\n",
+      "          \"name\": \"Morphics\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 220,\n",
+      "          \"name\": \"Plastids\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"itemCount\": 500,\n",
+      "          \"name\": \"Salvage\"\n",
+      "        }\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def item_has_components(item):\n",
+    "    return \"components\" in item.keys()\n",
+    "\n",
+    "def recursive_component_finder(item):\n",
+    "    item_info = {\"name\": item[\"name\"]}\n",
+    "    \n",
+    "    if item_has_components(item):\n",
+    "        item_info[\"buildPrice\"] = item[\"buildPrice\"]\n",
+    "        components = []\n",
+    "        for component in item[\"components\"]:\n",
+    "            component_info = {\"itemCount\": component[\"itemCount\"]}\n",
+    "            component_info = {**component_info, **recursive_component_finder(component)}\n",
+    "            components.append(component_info)\n",
+    "        item_info[\"components\"] = components\n",
+    "    \n",
+    "    return item_info\n",
+    "\n",
+    "def print_component_tree(item):\n",
+    "    item_data = recursive_component_finder(item)\n",
+    "    print(json.dumps(item_data, indent=2))\n",
+    "\n",
+    "\n",
+    "for item in data_warframes:\n",
+    "    if item[\"name\"] == \"Nekros\":\n",
+    "        print_component_tree(item)"
    ]
   }
  ],
