First pass of redesigned component panel
Add a line for each component with image, name, and quantity (accessible to the JS via unique ID)
Some components are sorted into groups within the panel

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -80,6 +80,7 @@
     "items = {}\n",
     "html_ids = {}\n",
     "images = []\n",
+    "c_html_ids = {}\n",
     "\n",
     "def item_has_components(item):\n",
     "    \"\"\"Perform a check to see if the provided item has components listed.\"\"\"\n",
@@ -106,6 +107,8 @@
     "    \"Purified Heciphron\", \"Stellated Necrathene\", \"Faceted Tiametrite\", \"Trapezium Xenorhast\",\n",
     "]\n",
     "\n",
+    "component_names = []\n",
+    "\n",
     "def extract_useful_data(data):\n",
     "    \"\"\"Extract the components needed for each items and store them against the item name in the items dictionary.\n",
     "    Also, return the names of items added to the dictionary from the current set of provided data.\n",
@@ -122,6 +125,21 @@
     "            \n",
     "        # Get the item's list of components \n",
     "        item_components = get_item_components(item)\n",
+    "        \n",
+    "        # Store the [name, image name, HTML ID] data for components in the component_names list\n",
+    "        for component in item[\"components\"]:\n",
+    "            html_id = \"c-\" + component[\"name\"].lower().replace(\" \", \"-\").replace(\"&\", \"and\")\n",
+    "            item_info = [component[\"name\"], component[\"imageName\"], html_id]\n",
+    "            if item_info not in component_names:\n",
+    "                component_names.append(item_info)\n",
+    "            c_html_ids[component[\"name\"]] = html_id\n",
+    "            if item_has_components(component) and component[\"name\"] not in sub_items_to_ignore:\n",
+    "                for subcomponent in component[\"components\"]:\n",
+    "                    html_id = \"c-\" + subcomponent[\"name\"].lower().replace(\" \", \"-\").replace(\"&\", \"and\")\n",
+    "                    item_info = [subcomponent[\"name\"], subcomponent[\"imageName\"], html_id]\n",
+    "                    if item_info not in component_names:\n",
+    "                        component_names.append(item_info)\n",
+    "                    c_html_ids[subcomponent[\"name\"]] = html_id\n",
     "        \n",
     "        # Check each component for subcomponents, skipping some we want to ignore such as refined minerals, and if it has\n",
     "        # subcomponents, append them to the item's total list of components\n",
@@ -189,7 +207,87 @@
     "\n",
     "# Save the item name to HTML IDs dictionary as a JavaScript file, so that it can be directly loaded by the page\n",
     "with open(\"./webpage/js/all-item-names.js\", \"w\") as f:\n",
-    "    f.write(\"var allItemNames = \" + json.dumps(html_ids))"
+    "    f.write(\"var allItemNames = \" + json.dumps(html_ids))\n",
+    "\n",
+    "# Save the component name to HTML IDs dictionary as a JavaScript file, so that it can be directly loaded by the page\n",
+    "with open(\"./webpage/js/all-component-names.js\", \"w\") as f:\n",
+    "    f.write(\"var allComponentNames = \" + json.dumps(c_html_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "component_names_dict = {entry[0]: entry for entry in component_names}\n",
+    "\n",
+    "def extract_item_name_set(item_group_names):\n",
+    "    \"\"\"For the provided list of item names, extract the [name, image name, HTML ID] data from component_names, removing the\n",
+    "    original in component_names, and return the data.\n",
+    "    \"\"\"\n",
+    "    global component_names\n",
+    "    \n",
+    "    # Look up the item info for each item in the group and make into a list\n",
+    "    item_group_info = [component_names_dict[item_name] for item_name in item_group_names if item_name in component_names_dict.keys()]\n",
+    "    \n",
+    "    # Remove each from the component names list\n",
+    "    component_names = [x for x in component_names if x[0] not in item_group_names]\n",
+    "\n",
+    "    return item_group_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\"Isos\", \n",
+    " \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_group_commonbuilt = [\"Forma\", \"Detonite Injector\", \"Fieldron\", \"Mutagen Mass\"]\n",
+    "item_group_commonstarchart = [\"Alloy Plate\", \"Ferrite\", \"Nano Spores\", \"Salvage\"]\n",
+    "item_group_uncommonstarchart = [\"Carbides\", \"Circuits\", \"Cryotic\", \"Copernics\", \"Cubic Diodes\", \"Hexenon\", \"Oxium\", \n",
+    "                                \"Plastids\", \"Pustrels\", \"Polymer Bundle\", \"Rubedo\"]\n",
+    "item_group_weapons = [\"Akbolto\", \"Akstiletto\", \"Amphis\", \"Ankyros\", \"Atomos\", \"Bo\", \"Bolto\", \"Boltor\", \"Broken War\", \n",
+    "                      \"Bronco\", \"Bronco Prime\", \"Cernos\", \"Cestra\", \"Drakgoon\", \"Dual Cleavers\", \"Dual Kamas\", \"Dual Skana\",\n",
+    "                      \"Dual Zoren\", \"Furis\", \"Galatine\", \"Gammacor\", \"Grakata\", \"Hikou\", \"Kama\", \"Kogake\", \"Kohmak\", \n",
+    "                      \"Kraken\", \"Krohkur\", \"Kronen\", \"Kunai\", \"Lato\", \"Latron\", \"Lex\", \"Lex Prime\", \"Magistar\", \"Magnus\",\n",
+    "                      \"Miter\", \"Mutalist Cernos\", \"Nikana\", \"Ninkondi\", \"Tipedo\", \"Vasto\", \"Vasto Prime\", \"Viper\"]\n",
+    "item_group_rarestarchart = [\"Argon Crystal\", \"Control Module\", \"Gallium\", \"Morphics\", \"Neural Sensors\", \"Neurodes\",\n",
+    "                            \"Orokin Cell\", \"Tellurium\"]\n",
+    "item_group_openworldearth = [\"Auroxium Alloy\", \"Coprite Alloy\", \"Fersteel Alloy\", \"Pyrotic Alloy\", \"Tear Azurite\",\n",
+    "                             \"Star Crimzian\", \"Esher Devar\", \"Heart Nyth\", \"Radian Sentirum\", \"Marquise Veridos\"]\n",
+    "item_group_openworldvenus = [\"Axidrol Alloy\", \"Hespazym Alloy\", \"Travocyte Alloy\", \"Venerdo Alloy\", \"Star Amarast\",\n",
+    "                             \"Goblite Tears\", \"Heart Noctrul\", \"Smooth Phasmin\", \"Marquise Thyst\", \"Radiant Zodian\"]\n",
+    "item_group_openworlddeimos = [\"Adramal Alloy\", \"Tempered Bapholite\", \"Devolved Namalon\", \"Thaumic Distillate\",\n",
+    "                              \"Purged Dagonic\", \"Cabochon Embolos\", \"Purified Heciphron\", \"Stellated Necrathene\",\n",
+    "                              \"Faceted Tiametrite\", \"Trapezium Xenorhast\"]\n",
+    "\n",
+    "component_group_info = [\n",
+    "    {\"name\": \"Composite Parts\", \"item_info\": extract_item_name_set(item_group_commonbuilt)},\n",
+    "    {\"name\": \"Common Starchart Resoruces\", \"item_info\": extract_item_name_set(item_group_commonstarchart)},\n",
+    "    {\"name\": \"Uncommon Starchart Resoruces\", \"item_info\": extract_item_name_set(item_group_uncommonstarchart)},\n",
+    "    {\"name\": \"Weapons Used in Crafting\", \"item_info\": extract_item_name_set(item_group_weapons)},\n",
+    "    {\"name\": \"Rare Starchart Resoruces\", \"item_info\": extract_item_name_set(item_group_rarestarchart)},\n",
+    "    {\"name\": \"Plains of Eidolon Mining\", \"item_info\": extract_item_name_set(item_group_openworldearth)},\n",
+    "    {\"name\": \"Orb Vallis Mining\", \"item_info\": extract_item_name_set(item_group_openworldvenus)},\n",
+    "    {\"name\": \"Cambion Drift Mining\", \"item_info\": extract_item_name_set(item_group_openworlddeimos)},\n",
+    "    {\"name\": \"Everything Else\", \"item_info\": component_names}\n",
+    "]\n",
+    "pickle.dump(component_group_info, open(\"component_group_info.pickle\", \"wb\"))"
    ]
   },
   {
